new stuffs done.

--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -13,7 +13,7 @@
 <div ng-repeat="item in items | filter: {isCompleted:false} | filter: searchText">
     <div class="panel panel-default">
         <div class="panel-body">
-            <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
+            <div class="col-xs-1"><input type="checkbox" name="" ng-model="item.isCompleted" ng-change="inputChange(item) "></div>
             <div class="col-xs-9"><a href="#/items/view/{{item.id}}">{{item.task}}</a></div>
             <div class="col-xs-1">{{item.assignedTo}}</div>
             <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o" ng-click="deleteItem(item.id)"></button></div>
@@ -25,7 +25,7 @@
     <div ng-repeat="item in items | filter: {isCompleted:true}">
 	    <div class="panel panel-default">
 	        <div class="panel-body">
-	            <div class="col-xs-1"><input type="checkbox" name="" ng-checked="item.isCompleted"></div>
+	            <div class="col-xs-1"><input type="checkbox" name="" ng-model="item.isCompleted" ng-change="inputChange(item)"></div>
 	            <div class="col-xs-9"><a href="#/items/view/{{item.id}}">{{item.task}}</a></div>
 	            <div class="col-xs-1">{{item.assignedTo}}</div>
 	            <div class="col-xs-1"><button class="btn btn-danger fa fa-trash-o" ng-click="deleteItem(item.id)"></button></div>
